2004-12-26  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxPattern.java (literalIdentifierEq,
	getLiteralsList): New static methods.
	(translate): Use literalIdentifierEq.
	* kawa/standard/syntax_rules.java: (rewriteForm): Use new
	SyntaxPattern.getLiteralsList method.
	* kawa/standard/syntax_case.java: (rewriteForm): Likewise.

	* kawa/lang/SyntaxRule.java (<init>): Take extra SyntaxForm parameter.
	* kawa/lang/SyntaxTemplate.java: Likewise.
	(convert_template): Pass extra SyntaxForm parameter.
	* kawa/standard/syntax.java: Fix to pass null SyntaxForm.
	* kawa/standard/define_syntax.java (scanForDefinitions): Replace by ...
	(scanForm): New method.  Fix lacking handling of SyntaxForm.
	* kawa/lang/SyntaxRules.java (<init>):  Likewise.

2004-12-24  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java: New syntax "include-relative".
	The "include" syntax was moved.

	* kawa/lang/SyntaxForm.java (makeWithTemplate): New static function.

	* kawa/lang/SyntaxPattern.java (allocVars): New helper method.
	* kawa/lang/Translator.java (matchArray): New field, moved
	here from syntax_case.work.
	* kawa/standard/syntax_case.java: Fix bugs when nested syntax-cases.

	* kawa/standard/Scheme.java; Define "include", "syntax-object->datum",
	"datum->syntax-object", "with-syntax".

2004-12-23  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (setLineOf): Do nothing if QuoteExp.

2004-12-22  Per Bothner  <per@bothner.com>

	* Makefile.am: Partially convert pre-processor syntax, for JAXP
	version selection: use #ifdef, #ifndef, #else.  Updates rules.
	* build.xml: Update select-java1, select-java2, select-java5.

	* kawa/lang/SyntaxTemplate.java: Fix comment syntax so it doesn't
	break under 'make select-java1' -> 'make select-java2'.
	* kawa/lang/Translator.java (syntaxError): Moved to Compilation.
	* kawa/standard/Scheme.java: Update classes for 'make-element' and
	'make-attribute'.

2004-12-20  Per Bothner  <per@bothner.com>
