@@ -198,9 +198,9 @@ AC_LINK_FILES(gnu/xquery/testsuite/bids.xml.in, gnu/xquery/testsuite/bids.xml)
 AC_LINK_FILES(gnu/xquery/testsuite/users.xml.in, gnu/xquery/testsuite/users.xml)
 AC_LINK_FILES(testsuite/scribble.html.in, testsuite/scribble.html)
 
-AC_OUTPUT(Makefile gnu/Makefile gnu/bytecode/Makefile gnu/math/Makefile
+AC_OUTPUT(Makefile gnu/bytecode/Makefile gnu/math/Makefile
   gnu/lists/Makefile gnu/text/Makefile gnu/mapping/Makefile gnu/expr/Makefile
-  gnu/kawa/Makefile gnu/kawa/util/Makefile gnu/kawa/reflect/Makefile 
+  gnu/kawa/util/Makefile gnu/kawa/reflect/Makefile 
   gnu/kawa/functions/Makefile gnu/kawa/servlet/Makefile
   gnu/xml/Makefile gnu/kawa/xml/Makefile
   gnu/kawa/xslt/Makefile gnu/kawa/sax/Makefile
